adding client-go, enabling auth middleware, updating swagger with more methods
